--- a/index.html
+++ b/index.html
@@ -288,8 +288,10 @@
                                     perfeito funcionamento e a sua tranquilidade. Nossa equipe é especializada para que
                                     sua nova fechadura esteja pronta para uso sem complicações.
                                 </p>
-                            </div>
 
+                            </div>
+                            <button
+                                class="btn-orcamento-service   btn btn-lg bg-default text-default"><strong>Solicitar Orçamento</strong></button>
                         </div>
 
                     </div>
@@ -310,6 +312,8 @@
                                     controle de segurança moderno e eficiente.
                                 </p>
                             </div>
+                            <button class="btn-orcamento-service btn-lg btn bg-default text-default"><strong>Solicitar Orçamento</strong></button>
+
                         </div>
 
                     </div>
@@ -327,6 +331,8 @@
                                     fechaduras de diversos modelos e níveis de segurança, com técnica.
                                 </p>
                             </div>
+                            <button class="btn-orcamento-service btn-lg btn bg-default text-default"><strong>Solicitar Orçamento</strong></button>
+
                         </div>
                     </div>
 
@@ -344,6 +350,8 @@
                                     instalação da nova.
                                 </p>
                             </div>
+                            <button class="btn-orcamento-service btn-lg btn bg-default text-default"><strong>Solicitar Orçamento</strong></button>
+
                         </div>
                     </div>
 
@@ -360,6 +368,8 @@
                                     moradores ou prestadores, podem ter tido acesso às chaves.
                                 </p>
                             </div>
+                            <button class="btn-orcamento-service btn-lg btn bg-default text-default"><strong>Solicitar Orçamento</strong></button>
+
                         </div>
                     </div>
 
@@ -376,6 +386,8 @@
                                     precisão e rapidez.
                                 </p>
                             </div>
+                            <button class="btn-orcamento-service btn-lg btn bg-default text-default"><strong>Solicitar Orçamento</strong></button>
+
                         </div>
                     </div>
 
@@ -393,6 +405,8 @@
                                     partir de cilindros e fechaduras.
                                 </p>
                             </div>
+                            <button class="btn-orcamento-service btn-lg btn bg-default text-default"><strong>Solicitar Orçamento</strong></button>
+
                         </div>
                     </div>
 
@@ -410,6 +424,7 @@
                                     modelos, com total sigilo e cuidado.
                                 </p>
                             </div>
+                            <button class="btn-orcamento-service btn-lg btn bg-default text-default"><strong>Solicitar Orçamento</strong></button>
 
 
                         </div>
@@ -431,6 +446,8 @@
                                     eletrônico, oferecendo maior controle e segurança.
                                 </p>
                             </div>
+                            <button class="btn-orcamento-service btn-lg btn bg-default text-default"><strong>Solicitar Orçamento</strong></button>
+
                         </div>
 
                     </div>
